fixed overflow of body

--- a/_global.scss
+++ b/_global.scss
@@ -24,7 +24,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   position: relative;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
