--- a/style.scss
+++ b/style.scss
@@ -7,8 +7,9 @@ $value: calc(100% + 100px);
 }
 body {
   font-family: MuseoSlab;
-  overflow-x: hidden;
+  // overflow-x: hidden !important;
   position: relative;
+  overflow-x: hidden;
   // background: url(./assets/map.svg);
   // background-position: 60px top;
   // background-repeat: no-repeat;
@@ -21,6 +22,12 @@ body {
 .container-fluid {
   width: 100%;
   margin: 0 auto;
+}
+.overflow {
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+  position: absolute;
 }
 .mapbg {
   position: absolute;
